@@ -3,9 +3,7 @@ JEDIT TO DO
 2.4:
 
 - do MARK_PREVIOUS before markKeyword()
-- write 'indentPrevLine' regexp for a few other modes
 - double-click drag doesn't work backwards
-- caret move on undo still screwed?
 
 2.5:
 
